<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">    
    <item android:id="@+id/menu_pointer"
		android:title="@string/pointer"
		android:checkable="true"
		android:icon="@drawable/ic_pointer"
		android:showAsAction="always" />
    <item android:id="@+id/menu_changegrid"
		android:title="@string/changegrid"
		android:checkable="true"
		android:icon="@drawable/ic_changegrid"
		android:showAsAction="always" /> 		
    <item android:id="@+id/menu_drawline"
		android:title="@string/drawline"
		android:checkable="true"
		android:icon="@drawable/ic_drawline"
		android:showAsAction="always" />
    <item android:id="@+id/menu_drawrect"
		android:title="@string/drawrect"
		android:checkable="true"
		android:icon="@drawable/ic_drawrect"
		android:showAsAction="always" />
    <item android:id="@+id/menu_drawcircle"
		android:title="@string/drawcircle"
		android:checkable="true"
		android:icon="@drawable/ic_drawcircle"
		android:showAsAction="always" />
    <item android:id="@+id/menu_drawfree"
		android:title="@string/drawfree"
		android:checkable="true"
		android:icon="@drawable/ic_drawfree"
		android:showAsAction="always" />
    <item android:id="@+id/menu_drawtext"
		android:title="@string/drawtext"
		android:checkable="true"
		android:icon="@drawable/ic_drawtext"
		android:showAsAction="always" />
    <item android:id="@+id/menu_new"
		android:title="@string/newproject" />
    <item android:id="@+id/menu_open"
		android:title="@string/openproject" />
    <item android:id="@+id/menu_save"
		android:title="@string/saveproject" />
    <item android:id="@+id/menu_saveas"
		android:title="@string/saveasproject" />
    <item android:id="@+id/menu_rename"
		android:title="@string/renameproject" />
    <item android:id="@+id/menu_exit"
		android:title="@string/exit" />
</menu>
