<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/sort_alpha"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_alpha" 
        android:checkable="true" />
    
        <item
        android:id="@+id/sort_size"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_size" 
        android:checkable="true" />

    <item
        android:id="@+id/sort_time"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_time" 
        android:checkable="true" />

    <item
        android:id="@+id/sort_reverse"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_reverse" 
        android:checkable="true" />
</menu>












